# loremlab

./: .gitignore  README.md
.github/instructions/: docxer.instructions.md  python-uv.instructions.md
docxer/: pyproject.toml  test_output.docx  test_table.docx
docxer/examples/hr-policies/: README.md  project.yaml
docxer/examples/hr-policies/output/: faq_006.docx  faq_007.docx  memo_003.docx  memo_004.docx  memo_005.docx  policy_001.docx  policy_002.docx
docxer/examples/hr-policies/output2/: faq_006.docx  faq_007.docx  memo_003.docx  memo_004.docx  memo_005.docx  policy_001.docx  policy_002.docx
docxer/examples/hr-policies/seed/: benefits-overview.md  company-info.md  pto-rules.md
docxer/prompts/: email.yaml  faq.yaml  memo.yaml  policy.yaml  report.yaml
docxer/src/docxer/: __init__.py  __main__.py  converter.py  foundry.py  generator.py  orchestrator.py  project.py
suppliers/: project.yaml
suppliers/output/: supplier-due-diligence.docx  supplier-performance-monitoring.docx  supplier-selection.docx
suppliers/seed/: README.md
